--- a/src/components/curso.astro
+++ b/src/components/curso.astro
@@ -6,23 +6,25 @@ export interface Props {
 }
 
 const { titulo, contenido, imagen } = Astro.props;
-
+console.log(imagen);
 const backgroundImage = `url(${imagen})`;
+const backgroundColor = "red";
 ---
 
 <style define:vars={{ backgroundImage }}>
   .curso {
     background-image: linear-gradient(
         to right,
-        rgb(0 0 0/-65),
-        rgb(0, 0, 0/0.85)
+        rgb(0 0 0 / 0.65),
+        rgb(0, 0, 0 / 0.7)
       ),
       var(--backgroundImage);
+    /* background-color: var(--backgroundColor); */
   }
 </style>
 
 <section class="curso">
-  <div class="contenedor grid">
+  <div class="contenedor curso-grid">
     <div class="contenido">
       <h2 class="heading">{titulo}</h2>
       <p>{contenido}</p>
@@ -38,12 +40,13 @@ const backgroundImage = `url(${imagen})`;
     background-position: center center;
   }
   @media (min-width: 768px) {
-    .grid {
+    .curso-grid {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
     }
-    .contenido {
-      grid-column: 2 / 3;
+
+    .curso .contenido {
+      grid-column: 2/3;
     }
   }
   .curso p {
